# popsam

./: CHANGELOG.md  Cargo.toml  README.md
crates/popsam-cli/: Cargo.toml
crates/popsam-cli/src/: main.rs
crates/popsam-core/: Cargo.toml
crates/popsam-core/src/: election.rs  embedding.rs  error.rs  lib.rs  model.rs
crates/popsam-py/: Cargo.toml  README.md  pyproject.toml
crates/popsam-py/src/: lib.rs
examples/: feedback.jsonl  feedback.txt
