[workspace]
members = [
    "crates/popsam-core",
    "crates/popsam-cli",
    "crates/popsam-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Oliver"]
repository = "https://github.com/curoli/popsam"
homepage = "https://github.com/curoli/popsam"

[workspace.dependencies]
anyhow = "1.0"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq", "rustls-tls"] }
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
rand = "0.9"
rand_chacha = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22.2"
