[package]
name = "popsam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
popsam-core = { path = "../popsam-core" }
