[package]
name = "popsam-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for AI-assisted selection of semantically representative texts"
readme = "../../README.md"
keywords = ["embeddings", "nlp", "sampling", "cli", "feedback"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
popsam-core = { version = "0.1.0", path = "../popsam-core" }
