[package]
name = "popsam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
csv.workspace = true
hf-hub.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
