[package]
name = "popsam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for AI-assisted selection of semantically representative texts"
readme = "../../README.md"
keywords = ["embeddings", "nlp", "sampling", "semantic-search", "feedback"]
categories = ["text-processing", "algorithms"]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
csv.workspace = true
hf-hub.workspace = true
rand.workspace = true
rand_chacha.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
