[package]
name = "popsam-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python extension crate for AI-assisted selection of semantically representative texts"
readme = "../../README.md"
keywords = ["python", "embeddings", "nlp", "sampling", "feedback"]
categories = ["api-bindings", "text-processing"]

[lib]
name = "popsam"
crate-type = ["cdylib"]

[dependencies]
candle-core.workspace = true
popsam-core = { version = "0.1.0", path = "../popsam-core" }
pyo3.workspace = true
serde_json.workspace = true
