[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "popsam"
version = "0.1.0"
description = "AI-assisted selection of semantically representative texts"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Oliver" },
]
keywords = ["embeddings", "nlp", "sampling", "semantic", "feedback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/curoli/popsam"
Repository = "https://github.com/curoli/popsam"
Issues = "https://github.com/curoli/popsam/issues"

[tool.maturin]
module-name = "popsam"
